fixed layout issues in overlay, closed #3

--- a/css/scss/_components.scss
+++ b/css/scss/_components.scss
@@ -66,7 +66,7 @@ button {
   text-align: center;
   position: relative;
   top: 50%;
-  height: 60%;
+  height: 80%;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 }
@@ -78,15 +78,19 @@ button {
   display: inline-block;
   height: 100%;
   position: relative;
+  :nth-last-child(2) {
+    margin-bottom: 20px;
+  }
 }
 
 .overlay ul li {
   display: block;
   height: 20%;
-  height: calc(50% / 6);
+  height: calc(50% / 7);
   min-height: 24px;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+
 }
 
 .overlay ul li a {
